--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-mustache')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.jetbrains:annotations:15.0'
 }
