--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,24 @@ cache:
 
 script: "./gradlew clean build"
 
+before_deploy:
+  - zip -r garden-springboot2-webservice
+  - mkdir -p deploy
+  - mv garden-springboot2-webservice.zip deploy/garden-springboot2-webservice.zip
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings 에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings 에 설정된 값
+    bucket: garden-springboot2-webservice
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private # zip 파일 접근을 private으로
+    local_dir: deploy # before_deploy에서 생성한 디렉토리
+    wait-until-deployed: true
+
 # CI 실행 완료 시 메일로 알림
 notifications:
   email:
     recipients:
       - khjvvv7@gmail.com
-
-#test
-before_install:
-  - chmod +x gradlew
