--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r garden-springboot2-webservice
+  - zip -r garden-springboot2-webservice *
   - mkdir -p deploy
   - mv garden-springboot2-webservice.zip deploy/garden-springboot2-webservice.zip
 
